<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4DADA"
    tools:context=".FourthActivity">
<com.google.android.material.button.MaterialButton
    android:id="@+id/more"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="?attr/materialIconButtonStyle"
    app:icon="@drawable/more"
    app:iconTintMode="multiply"
    app:iconSize="24sp"
    app:iconGravity="textStart"
    android:backgroundTint="#F4DADA"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/clickable">

</com.google.android.material.button.MaterialButton>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/more">
        <FrameLayout
            android:id="@+id/m3_side_sheet"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            style="@style/Widget.Material3.SideSheet"
            app:layout_behavior="com.google.android.material.sidesheet.SideSheetBehavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
<com.google.android.material.button.MaterialButton
    android:id="@+id/leftArrowButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:icon="@drawable/left_arrow"
    style="?attr/materialIconButtonStyle"
    android:contentDescription="@string/clickable"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labels"
                android:textSize="18sp"/>
            </LinearLayout>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:padding="8dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:padding="8dp"
                android:layout_marginTop="120dp"
                android:layout_marginStart="16dp"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:padding="8dp"
                android:layout_marginTop="80dp"
                android:layout_marginStart="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminders"
            android:padding="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginStart="16dp"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:padding="8dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="16dp"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_marginTop="240dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="280dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
              style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="232dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content"
               android:layout_marginTop="320dp"
               app:boxBackgroundColor="#8FEFD8D8"
               android:backgroundTint="#F6CECE"
                app:boxStrokeColor="#F18585">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/format" />


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_marginTop="400dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="440dp"/>
            <com.google.android.material.slider.Slider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:valueFrom="0.0"
                android:valueTo="100.0"
                android:layout_marginTop="480dp"
                android:layout_marginStart="16dp"
                app:thumbColor="#F18585"
                app:trackColorActive="#F18585"
                style="@style/CustomSliderLabel"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                app:dividerInsetStart="16dp"
                app:dividerInsetEnd="16dp"
                android:layout_marginTop="540dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="560dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="600dp"
                android:layout_marginStart="16dp">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any_time"
                   app:buttonTint="#F18585"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/older_than_a_year"
                    app:buttonTint="#F18585"/>
            </RadioGroup>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>