<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".SecondActivity">


    <com.google.android.material.navigationrail.NavigationRailView
        android:id="@+id/navigationRail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/clock_gradient"
        android:clipToPadding="false"
        app:headerLayout="@layout/navigation_rail_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/nav_menu"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F89B9B"
        android:text="Get Date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/navigationRail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:endIconDrawable="@drawable/close"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/passwordTextField"
        app:layout_constraintStart_toEndOf="@id/navigationRail"
        app:startIconDrawable="@drawable/person">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="6"
       app:endIconMode="password_toggle"
        app:errorIconDrawable="@drawable/error"
        app:layout_constraintBottom_toTopOf="@id/textField3"
        app:layout_constraintStart_toEndOf="@id/navigationRail"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/getdate"
        app:layout_constraintStart_toEndOf="@id/navigationRail">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/category" />


    </com.google.android.material.textfield.TextInputLayout>
<TimePicker
  android:id="@+id/tp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:timePickerMode="spinner"
    android:background="@drawable/clock_gradient"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/navigationRail"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/right_side_sheet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/tp"
        app:layout_constraintStart_toEndOf="@id/navigationRail"
        android:backgroundTint="#F89B9B"/>


</androidx.constraintlayout.widget.ConstraintLayout>
